k3s/searxng/core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: core
  name: core
  namespace: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: core
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: core
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: env
          image: docker.io/searxng/searxng:latest
          name: searxng-core
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/searxng
              name: core-claim0
            - mountPath: /var/cache/searxng
              name: core-data
      restartPolicy: Always
      volumes:
        - name: core-claim0
          persistentVolumeClaim:
            claimName: core-claim0
        - name: core-data
          persistentVolumeClaim:
            claimName: core-data
