k3s/searxng/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: searxng
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: searxng
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: searxng
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 977
      containers:
      - env:
        - name: BASE_URL
          value: https://search.lan
        name: searxng
        image: searxng/searxng:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          periodSeconds: 30
          timeoutSeconds: 60
        livenessProbe: 
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 60
          successThreshold: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
        securityContext:
          runAsNonRoot: false
          privileged: false
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          procMount: Default
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL
            add:
              - SETGID
              - SETUID          
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /etc/searxng
          name: searxng
        - mountPath: /tmp
          name: tmp
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: searxng
        emptyDir: {}
      - name: tmp
        emptyDir: {}
