k3s/searxng/valkey-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: valkey
  name: valkey
  namespace: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: valkey
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: valkey
    spec:
      containers:
        - args:
            - valkey-server
            - --save
            - "30"
            - "1"
            - --loglevel
            - warning
          image: docker.io/valkey/valkey:9-alpine
          name: searxng-valkey
          volumeMounts:
            - mountPath: /data
              name: valkey-data
      restartPolicy: Always
      volumes:
        - name: valkey-data
          persistentVolumeClaim:
            claimName: valkey-data
