k3s/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng-service
  namespace: searxng
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 8080
  selector:
    app: searxng
