k3s/searxng/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: searxng-ingress
  namespace: searxng
spec:
  ingressClassName: traefik
  rules:
  - host: search.internal
    http:
      paths:
      - backend:
          service:
            name: searxng-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - search.internal
    secretName: searxng-tls
